# AstroRpi

./: .gitignore  .gitmodules  AstroCamPi.sln  AstroRpi.sln  CMakeLists.txt  LICENSE  astrorpi.service
AstroCamLib/: AstroCamLib_global.h  CMakeLists.txt  Image.h  ImageStacker.cpp  ImageStacker.h  astrocamlib.cpp  astrocamlib.h  messages.proto
AstroCamPi/: AstroCamPi.csproj  Program.cs  Startup.cs  _Imports.razor
AstroCamPi/Pages/: EditSettings.razor  EditSettings.razor.cs  Settings.razor  TakePicture.razor  TakePicture.razor.cs  _Host.cshtml
AstroCamPi/Properties/: launchSettings.json
AstroCamPi/Shared/: NavMenu.razor
AstroCamPiQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
AstroLib/: AstroLib.csproj
AstroLib/Interfaces/: ICamera.cs  IFocusAnalysis.cs
AstroLib/Model/: CameraService.cs  CameraSettings.cs  DummyCamera.cs  DummyFocusAnalysis.cs  LaplacianFocusAnalysis.cs  RpiHDCamera.cs  SettingsService.cs  StackedImage.cs
AstroRpi/: AstroRpi.csproj  Program.cs  Startup.cs  _Imports.razor
AstroRpi/Pages/: EditSettings.razor  EditSettings.razor.cs  TakePicture.razor  TakePicture.razor.cs  _Host.cshtml
AstroRpi/Properties/: launchSettings.json
AstroRpi/Properties/PublishProfiles/: FolderProfile.pubxml
AstroRpi/Shared/: NavMenu.razor
test/: Program.cs  test.csproj
